Nope, this needs to be larger to make sure entire screen is covered

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ svg {
 }
 
 .finish #inner-goal-finish {
-  transform: scale(100);
+  transform: scale(150);
 }
 
 @keyframes pulse {
